examples/errors/missing_return_if/main.hd
import std::io

fn check(x: int): int {
    if (x > 0) {
        return 1;
    }
}

fn main(): int {
    return 0;
}
